--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ Deviceinstance = 44
 CustomName     = PV01
 Phase          = L1
 Position       = 1
-HwVersiojn     = PM1_PLUS
+HwVersion     = PM1_PLUS
 LogLevel       = CRITICAL
 
 [ONPREMISE]
